Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98904

Facebook notifications do not work with QtWebEngine

XMLWordPrintable

    • Windows
    • db5e97492 (134-based-refactor)

      Trying to enable Facebook notifications do not work when using QtWebEngine.

      This can be reproduced with nanobrowser example, in Facebook settings:

      Settings ->Notiffications -> Browser -> Chrome push notifications

      The notification toggle immediately goes to off position after trying to enable it. No error messages or log entries are shown in Qt output.

      Other services such as Discord will allow enabling notifications this way with nanobrowser.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davidsz Szabolcs David
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes