src/core/net/system_network_context_manager.cpp
@@ -30,6 +30,11 @@
 #include "services/network/public/mojom/network_context.mojom.h"
 #include "services/proxy_resolver/public/mojom/proxy_resolver.mojom.h"
 
+#if defined(Q_OS_WIN)
+#include "components/os_crypt/os_crypt.h"
+#include "content/public/common/network_service_util.h"
+#endif
+
 namespace {
 
 // The global instance of the SystemNetworkContextmanager.
@@ -185,6 +190,11 @@ void SystemNetworkContextManager::OnNetworkServiceCreated(network::mojom::Networ
 
     network_service->SetUpHttpAuth(CreateHttpAuthStaticParams());
     network_service->ConfigureHttpAuthPrefs(CreateHttpAuthDynamicParams());
+
+#if defined(Q_OS_WIN)
+    if (content::IsOutOfProcessNetworkService())
+        network_service->SetEncryptionKey(OSCrypt::GetRawEncryptionKey());
+#endif
 
     // Configure the Certificate Transparency logs.
     std::vector<std::pair<std::string, base::Time>> disqualified_logs =
