src/core/pref_service_adapter.cpp
@@ -18,6 +18,8 @@
 #include "components/prefs/pref_service.h"
 #include "components/prefs/pref_service_factory.h"
 #include "components/prefs/pref_registry_simple.h"
+#include "components/signin/internal/identity_manager/account_tracker_service.h"
+#include "components/signin/public/base/signin_pref_names.h"
 #include "components/user_prefs/user_prefs.h"
 #include "components/proxy_config/pref_proxy_config_tracker_impl.h"
 #include "chrome/common/pref_names.h"
@@ -35,6 +37,10 @@
 #include "extensions/browser/pref_names.h"
 #include "extensions/browser/process_manager.h"
 #include "extensions/common/constants.h"
+#endif
+
+#if defined(Q_OS_WIN)
+#include "components/os_crypt/os_crypt.h"
 #endif
 
 namespace {
@@ -76,6 +82,23 @@ void PrefServiceAdapter::setup(const ProfileAdapter &profileAdapter)
     registry->RegisterBooleanPref(prefs::kShowInternalAccessibilityTree, false);
     registry->RegisterBooleanPref(prefs::kAccessibilityImageLabelsEnabled, false);
     registry->RegisterIntegerPref(prefs::kNotificationNextPersistentId, 10000);
+    registry->RegisterDictionaryPref(prefs::kPushMessagingAppIdentifierMap);
+    registry->RegisterListPref(prefs::kAccountInfo);
+    registry->RegisterIntegerPref(prefs::kAccountIdMigrationState,
+                                AccountTrackerService::MIGRATION_NOT_STARTED);
+    registry->RegisterStringPref(prefs::kGoogleServicesLastAccountId,
+                               std::string());
+    registry->RegisterStringPref(prefs::kGoogleServicesLastUsername,
+                               std::string());
+    registry->RegisterStringPref(prefs::kGoogleServicesAccountId, std::string());
+    registry->RegisterBooleanPref(prefs::kGoogleServicesConsentedToSync, false);
+    registry->RegisterBooleanPref(prefs::kAutologinEnabled, true);
+    registry->RegisterListPref(prefs::kReverseAutologinRejectedEmailList);
+    registry->RegisterBooleanPref(prefs::kSigninAllowed, true);
+    registry->RegisterBooleanPref(prefs::kSignedInWithCredentialProvider, false);
+#if defined(Q_OS_WIN)
+    OSCrypt::RegisterLocalPrefs(registry.get());
+#endif
 
 #if BUILDFLAG(ENABLE_EXTENSIONS)
     registry->RegisterDictionaryPref(extensions::pref_names::kExtensions);
